--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Clock</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        
+        <div class="js-clock">
+            <h1 class="js-clock-title">00:00</h1>
+        </div>
+        <form action="" class="js-form form">
+            <input type="text" placeholder="이름이 뭐니?">
+        </form>
+        <h4 class="js-greeting greeting"></h4>
+        <script src="greeting.js"></script>
+        <script src="clock.js"></script>
     </body>
 </html>
