--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
             <input type="text" placeholder="이름이 뭐니?">
         </form>
         <h4 class="js-greeting greeting"></h4>
+        <form action="" class="js-toDoForm">
+            <input type="text" placeholder="Write a to do">
+        </form>
+        <ul class="js-toDoList">
+        </ul>
         <script src="greeting.js"></script>
         <script src="clock.js"></script>
+        <script src="todo.js"></script>
     </body>
 </html>
