랜덤배경 추가 , 위치정보추가 끝!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="js-clock">
-            <h1 class="js-clock-title">00:00</h1>
+            <h1 class="js-clock-title">00:00:00</h1>
         </div>
         <form action="" class="js-form form">
             <input type="text" placeholder="이름이 뭐니?">
@@ -20,8 +20,11 @@
         </form>
         <ul class="js-toDoList">
         </ul>
+        <strong class="js-weather"></strong>
         <script src="greeting.js"></script>
         <script src="clock.js"></script>
         <script src="todo.js"></script>
+        <script src="bg.js"></script>
+        <script src="weather.js"></script>
     </body>
 </html>
